Adding new references from original doctoral project

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -43,11 +43,11 @@
 }
 
 @Book{Kerievsky2004,
- author ="Kerievsky, Joshua",
- title ="Refactoring to Patterns",
- year ="2004",
- isbn ="0321213351",
- publisher ="Pearson Higher Education"
+ author = {Kerievsky, Joshua},
+ title = {Refactoring to Patterns},
+ year = {2004},
+ isbn = {0321213351},
+ publisher = {Pearson Higher Education}
 } 
 
 @Article{Chidamber1994,
@@ -56,7 +56,7 @@
   title      = {A Metrics Suite for Object Oriented Design},
   year       = {1994},
   issn       = {0098-5589},
-  month      = jun,
+  month      = {jun},
   number     = {6},
   pages      = {476--493},
   volume     = {20},
@@ -77,7 +77,6 @@
   pages     = {127--131},
   volume    = {52},
   abstract  = {Global Software Development (GSD) is increasingly becoming the normal practice in the software industry, readily evidenced by U.S. estimates that the value of the offshore software development market has increased 25-fold over the past 10 years, to the extent that one-quarter of U.S. spending on application development, integration and management services is expected to go off-shore according to recent predictions. There are many potential benefits that can arise from GSD. The most frequently cited one is that of reduced development costs due to the salary savings possible. Also, GSD can lead to reduced development duration due to greater time zone effectiveness as companies practice the so-called 'follow-the-sun' software development model. GSD also affords new opportunities for cross-site modularization of development work, potential access to a larger and better-skilled developer pool, and the possibility of greater innovation, learning and transfer of best practices. Finally, GSD can facilitate closer proximity to markets and customers.
-
 However, GSD also introduces a number of challenges in relation to communication, coordination and control of the development process. These arise due to the distances involved in three dimensions -- geographical, temporal, and socio-cultural (See Figure 1). As a consequence, much research and practice has focused on trying to find ways to overcome the GSD challenges identified in Figure 1. In the literature to date, the potential benefits of GSD are usually just mentioned very briefly, if they are mentioned at all, and the realization of these benefits seems to be more or less taken for granted. The primary focus instead is on how the problems inherent in GSD might be addressed. Here, we reverse this trend and focus instead on the benefits and the extent to which they are actually being realized in practice in three global companies practicing GSD.},
   acmid     = {1536648},
   address   = {New York, NY, USA},
@@ -390,7 +389,7 @@ This tertiary study revisited the TD landscape. Its results can help to identify
   year      = {2014},
   month     = {April},
   pages     = {1-10},
-  abstract  = {A Cloud-based Service-Oriented Architecture (CBSOA) is typically composed of web services, which are offered off the cloud marketplace. CB-SOA can improve its utility and add value to its composition by switching among its constituent services. We look at the option to defer the decision of substitution under uncertainty. We exploit Binomial Options to the formulation. We quantify the time-value of the architecture decisions of switching web services and technical debt they can imply on the structure. As CB-SOA are market-sensitive, dynamic and "volatile", the decision of deferral tends to be sensitive to these dynamics. Henceforth, the structural complexity of a CB-SOAcan change over time and so the technical debt as its constituent web services are modified, replaced, upgraded, etc. The method builds on Design Structure Matrix (DSM) and introduces time and complexity aware propagation cost metrics to assess the value of deferral decisions relative to changes in the structure. Architects of CB-SOA can use our method to assess the time value of deferring the decisions to switch web services relative to complexity, technical debt and value creation. We demonstrate the applicability of the method using an illustrative example.},
+  abstract  = {A Cloud-based Service-Oriented Architecture (CBSOA) is typically composed of web services, which are offered off the cloud marketplace. CB-SOA can improve its utility and add value to its composition by switching among its constituent services. We look at the option to defer the decision of substitution under uncertainty. We exploit Binomial Options to the formulation. We quantify the time-value of the architecture decisions of switching web services and technical debt they can imply on the structure. As CB-SOA are market-sensitive, dynamic and volatile, the decision of deferral tends to be sensitive to these dynamics. Henceforth, the structural complexity of a CB-SOAcan change over time and so the technical debt as its constituent web services are modified, replaced, upgraded, etc. The method builds on Design Structure Matrix (DSM) and introduces time and complexity aware propagation cost metrics to assess the value of deferral decisions relative to changes in the structure. Architects of CB-SOA can use our method to assess the time value of deferring the decisions to switch web services relative to complexity, technical debt and value creation. We demonstrate the applicability of the method using an illustrative example.},
   doi       = {10.1109/ASWEC.2014.27},
   issn      = {1530-0803},
 }
@@ -431,23 +430,23 @@ This tertiary study revisited the TD landscape. Its results can help to identify
 }
 
 @ARTICLE {Guo2016,
-    author                  = "Guo, Y. and Spinola, R.O. and Seaman, C.",
-    title                   = "Exploring the costs of technical debt management – a case study",
-    journal                 = "Empirical Software Engineering",
-    year                    = "2016",
-    volume                  = "21",
-    number                  = "1",
-    pages                   = "159-182",
-    note                    = "cited By 7",
-    issn                    = "13823256",
-    abstract                = "Technical debt is a metaphor for delayed software maintenance tasks. Incurring technical debt may bring short-term benefits to a project, but such benefits are often achieved at the cost of extra work in future, analogous to paying interest on the debt. Currently technical debt is managed implicitly, if at all. However, on large systems, it is too easy to lose track of delayed tasks or to misunderstand their impact. Therefore, we have proposed a new approach to managing technical debt, which we believe to be helpful for software managers to make informed decisions. In this study we explored the costs of the new approach by tracking the technical debt management activities in an on-going software project. The results from the study provided insights into the impact of technical debt management on software projects. In particular, we found that there is a significant start-up cost when beginning to track and monitor technical debt, but the cost of ongoing management soon declines to very reasonable levels. © 2014, Springer Science+Business Media New York.",
-    affiliation             = "Department of Information Systems, University of Maryland Baltimore County, Baltimore, MD, United States; Department of Systems and Computing, University of Salvador, Salvador, Bahia, Brazil; Fraunhofer Project Center for Software and System Engineering at Federal University of Bahia, Salvador, Bahia, Brazil",
-    coden                   = "ESENF",
-    doi                     = "10.1007/s10664-014-9351-7",
-    keywords                = "Decision making, Informed decision; Management activities; New approaches; Software managers; Software project; Software-maintenance tasks; Start-up costs; Technical debts, Costs, rank4",
-    language                = "English",
-    publisher               = "Springer New York LLC",
-    source                  = "Scopus"
+    author                  = {Guo, Y. and Spinola, R.O. and Seaman, C.},
+    title                   = {Exploring the costs of technical debt management – a case study},
+    journal                 = {Empirical Software Engineering},
+    year                    = {2016},
+    volume                  = {21},
+    number                  = {1},
+    pages                   = {159-182},
+    note                    = {cited By 7},
+    issn                    = {13823256},
+    abstract                = {Technical debt is a metaphor for delayed software maintenance tasks. Incurring technical debt may bring short-term benefits to a project, but such benefits are often achieved at the cost of extra work in future, analogous to paying interest on the debt. Currently technical debt is managed implicitly, if at all. However, on large systems, it is too easy to lose track of delayed tasks or to misunderstand their impact. Therefore, we have proposed a new approach to managing technical debt, which we believe to be helpful for software managers to make informed decisions. In this study we explored the costs of the new approach by tracking the technical debt management activities in an on-going software project. The results from the study provided insights into the impact of technical debt management on software projects. In particular, we found that there is a significant start-up cost when beginning to track and monitor technical debt, but the cost of ongoing management soon declines to very reasonable levels. © 2014, Springer Science+Business Media New York.},
+    affiliation             = {Department of Information Systems, University of Maryland Baltimore County, Baltimore, MD, United States; Department of Systems and Computing, University of Salvador, Salvador, Bahia, Brazil; Fraunhofer Project Center for Software and System Engineering at Federal University of Bahia, Salvador, Bahia, Brazil},
+    coden                   = {ESENF},
+    doi                     = {10.1007/s10664-014-9351-7},
+    keywords                = {Decision making, Informed decision; Management activities; New approaches; Software managers; Software project; Software-maintenance tasks; Start-up costs; Technical debts, Costs, rank4},
+    language                = {English},
+    publisher               = {Springer New York LLC},
+    source                  = {Scopus}
 }
 
 @InCollection{YliHuumo2016a,
@@ -483,22 +482,22 @@ This tertiary study revisited the TD landscape. Its results can help to identify
 }
 
 @INPROCEEDINGS {Codabux2013,
-    author    = "Codabux, Zadia and Williams, Byron",
-    title     = "Managing Technical Debt: An Industrial Case Study",
-    booktitle = "Proceedings of the 4th International Workshop on Managing Technical Debt",
-    year      = "2013",
-    series    = "MTD '13",
-    pages     = "8--15",
-    address   = "Piscataway, NJ, USA",
-    month     = "May",
-    publisher = "IEEE Press",
-    abstract  = "Technical debt is the consequence of trade-offs made during software development to ensure speedy releases. The research community lacks rigorously evaluated guidelines to help practitioners characterize, manage and prioritize debt. This paper describes a study conducted with an industrial partner during their implementation of Agile development practices for a large software development division within the company. The report contains our initial findings based on ethnographic observations and semi-structured interviews. The goal is to identify the best practices regarding managing technical debt so that the researchers and the practitioners can further evaluate these practices to extend their knowledge of the technical debt metaphor. We determined that the developers considered their own taxonomy of technical debt based on the type of work they were assigned and their personal understanding of the term. Despite management's high-level categories, the developers mostly considered design debt, testing debt and defect debt. In addition to developers having their own taxonomy, assigning dedicated teams for technical debt reduction and allowing other teams about 20% of time per sprint for debt reduction are good initiatives towards lowering technical debt. While technical debt has become a well-regarded concept in the Agile community, further empirical evaluation is needed to assess how to properly apply the concept for various development organizations.",
-    acmid     = "2663299",
-    doi       = "10.1109/MTD.2013.6608672",
-    isbn      = "978-1-4673-6443-0",
-    keywords  = "agile methods, industrial case study, scrum, semi-structure interviews, technical debt, rank5",
-    location  = "San Francisco, California",
-    numpages  = "8"
+    author    = {Codabux, Zadia and Williams, Byron},
+    title     = {Managing Technical Debt: An Industrial Case Study},
+    booktitle = {Proceedings of the 4th International Workshop on Managing Technical Debt},
+    year      = {2013},
+    series    = {MTD '13},
+    pages     = {8--15},
+    address   = {Piscataway, NJ, USA},
+    month     = {May},
+    publisher = {IEEE Press},
+    abstract  = {Technical debt is the consequence of trade-offs made during software development to ensure speedy releases. The research community lacks rigorously evaluated guidelines to help practitioners characterize, manage and prioritize debt. This paper describes a study conducted with an industrial partner during their implementation of Agile development practices for a large software development division within the company. The report contains our initial findings based on ethnographic observations and semi-structured interviews. The goal is to identify the best practices regarding managing technical debt so that the researchers and the practitioners can further evaluate these practices to extend their knowledge of the technical debt metaphor. We determined that the developers considered their own taxonomy of technical debt based on the type of work they were assigned and their personal understanding of the term. Despite management's high-level categories, the developers mostly considered design debt, testing debt and defect debt. In addition to developers having their own taxonomy, assigning dedicated teams for technical debt reduction and allowing other teams about 20% of time per sprint for debt reduction are good initiatives towards lowering technical debt. While technical debt has become a well-regarded concept in the Agile community, further empirical evaluation is needed to assess how to properly apply the concept for various development organizations.},
+    acmid     = {2663299},
+    doi       = {10.1109/MTD.2013.6608672},
+    isbn      = {978-1-4673-6443-0},
+    keywords  = {agile methods, industrial case study, scrum, semi-structure interviews, technical debt, rank5},
+    location  = {San Francisco, California},
+    numpages  = {8}
 }
 
 @InProceedings{FernandezSanchez2017,
@@ -1254,6 +1253,127 @@ We find that smell density does not depend on repository size. Cumulatively, arc
   abstract     = {The Mining Software Repositories (MSR) research community has grown significantly since the first MSR workshop was held in 2004. As the community continues to broaden its scope and deepens its expertise, it is worthwhile to reflect on the best practices that our community has developed over the past decade of research. We identify these best practices by surveying past MSR conferences and workshops. To that end, we review all 117 full papers published in the MSR proceedings between 2004 and 2012. We extract 268 comments from these papers, and categorize them using a grounded theory methodology. From this evaluation, four high-level themes were identified: data acquisition and preparation, synthesis, analysis, and sharing/replication. Within each theme we identify several common recommendations, and also examine how these recommendations have evolved over the past decade. In an effort to make this survey a living artifact, we also provide a public forum that contains the extracted recommendations in the hopes that the MSR community can engage in a continuing discussion on our evolving best practices.},
   keywords     = {rank3},
   ranking      = {rank3},
+}
+
+@inproceedings{lehman1996laws,
+  title={Laws of software evolution revisited},
+  author={Lehman, Manny M},
+  booktitle={European Workshop on Software Process Technology},
+  pages={108--124},
+  year={1996},
+  organization={Springer}
+}
+
+@article{allman2012managing,
+  title={Managing technical debt},
+  author={Allman, Eric},
+  journal={Communications of the ACM},
+  volume={55},
+  number={5},
+  pages={50--55},
+  year={2012},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{minku2016data,
+  title={Data mining for software engineering and humans in the loop},
+  author={Minku, Leandro L and Mendes, Emilia and Turhan, Burak},
+  journal={Progress in Artificial Intelligence},
+  volume={5},
+  number={4},
+  pages={307--314},
+  year={2016},
+  publisher={Springer}
+}
+
+@inproceedings{van2011using,
+  title={Using code analysis tools for architectural conformance checking},
+  author={Van Eyck, Jo and Bouck{\'e}, Nelis and Helleboogh, Alexander and Holvoet, Tom},
+  booktitle={Proceedings of the 6th International Workshop on SHAring and Reusing Architectural Knowledge},
+  pages={53--54},
+  year={2011}
+}
+
+@book{bass2003software,
+  title={Software architecture in practice},
+  author={Bass, Len and Clements, Paul and Kazman, Rick},
+  year={2003},
+  publisher={Addison-Wesley Professional}
+}
+
+@inproceedings{gurgel2014blending,
+  title={Blending and reusing rules for architectural degradation prevention},
+  author={Gurgel, Alessandro and Macia, Isela and Garcia, Alessandro and von Staa, Arndt and Mezini, Mira and Eichberg, Michael and Mitschke, Ralf},
+  booktitle={Proceedings of the 13th international conference on Modularity},
+  pages={61--72},
+  year={2014}
+}
+
+@inproceedings{medvidovic2010software,
+  title={Software architecture: foundations, theory, and practice},
+  author={Medvidovic, Nenad and Taylor, Richard N},
+  booktitle={2010 ACM/IEEE 32nd International Conference on Software Engineering},
+  volume={2},
+  pages={471--472},
+  year={2010},
+  organization={IEEE}
+}
+
+@inproceedings{juarez2017preventing,
+  title={Preventing erosion in exception handling design using static-architecture conformance checking},
+  author={Juarez Filho, LM and Rocha, Lincoln and Andrade, Rossana and Britto, Ricardo},
+  booktitle={European Conference on Software Architecture},
+  pages={67--83},
+  year={2017},
+  organization={Springer}
+}
+
+@article{maccormack2016technical,
+  title={Technical debt and system architecture: The impact of coupling on defect-related activity},
+  author={MacCormack, Alan and Sturtevant, Daniel J},
+  journal={Journal of Systems and Software},
+  volume={120},
+  pages={170--182},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{witten2005practical,
+  title={Practical machine learning tools and techniques},
+  author={Witten, Ian H and Frank, Eibe and Hall, Mark A and Pal, Christopher J},
+  journal={Morgan Kaufmann},
+  volume={578},
+  pages={1},
+  year={2005},
+}
+
+@phdthesis{anichecontext,
+  title={Context-based code quality assessment},
+  author={Aniche, Maur{\'\i}cio Finavaro},
+  year={2016},
+  school={Universidade de S{\~a}o Paulo}
+}
+
+@article{maffort2016mining,
+  title={Mining architectural violations from version history},
+  author={Maffort, Cristiano and Valente, Marco Tulio and Terra, Ricardo and Bigonha, Mariza and Anquetil, Nicolas and Hora, Andr{\'e}},
+  journal={Empirical Software Engineering},
+  volume={21},
+  number={3},
+  pages={854--895},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{basili1996validation,
+  title={A validation of object-oriented design metrics as quality indicators},
+  author={Basili, Victor R and Briand, Lionel C. and Melo, Walc{\'e}lio L},
+  journal={IEEE Transactions on software engineering},
+  volume={22},
+  number={10},
+  pages={751--761},
+  year={1996},
+  publisher={IEEE}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
