Updating new references from SMS

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -1376,4 +1376,87 @@ We find that smell density does not depend on repository size. Cumulatively, arc
   publisher={IEEE}
 }
 
+@article{lees2010theoretical,
+  title={Theoretical maximum capacity as benchmark for empty vehicle redistribution in personal rapid transit},
+  author={Lees-Miller, John and Hammersley, John and Wilson, R},
+  journal={Transportation Research Record: Journal of the Transportation Research Board},
+  number={2146},
+  pages={76--83},
+  year={2010},
+  publisher={Transportation Research Board of the National Academies}
+}
+
+@article{besker2018managing,
+  title={Managing architectural technical debt: A unified model and systematic literature review},
+  author={Besker, Terese and Martini, Antonio and Bosch, Jan},
+  journal={Journal of Systems and Software},
+  volume={135},
+  pages={1--16},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{li2015systematic,
+  title={A systematic mapping study on technical debt and its management},
+  author={Li, Zengyang and Avgeriou, Paris and Liang, Peng},
+  journal={Journal of Systems and Software},
+  volume={101},
+  pages={193--220},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@inproceedings{martini2016empirically,
+  title={An empirically developed method to aid decisions on architectural technical debt refactoring: AnaConDebt},
+  author={Martini, Antonio and Bosch, Jan},
+  booktitle={2016 IEEE/ACM 38th International Conference on Software Engineering Companion (ICSE-C)},
+  pages={31--40},
+  year={2016},
+  organization={IEEE}
+}
+
+@incollection{li2014architectural,
+  title={Architectural debt management in value-oriented architecting},
+  author={Li, Zengyang and Liang, Peng and Avgeriou, Paris},
+  booktitle={Economics-Driven Software Architecture},
+  pages={183--204},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{michael2010transformation,
+  title={Transformation patterns for curing the human causes of technical debt},
+  author={Michael Golden, Jonathon},
+  journal={Cutter IT Journal},
+  volume={23},
+  number={10},
+  pages={30},
+  year={2010}
+}
+
+@article{ampatzoglou2015financial,
+  title={The financial aspect of managing technical debt: A systematic literature review},
+  author={Ampatzoglou, Areti and Ampatzoglou, Apostolos and Chatzigeorgiou, Alexander and Avgeriou, Paris},
+  journal={Information and Software Technology},
+  volume={64},
+  pages={52--73},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@inproceedings{xiao2016identifying,
+  title={Identifying and quantifying architectural debt},
+  author={Xiao, Lu and Cai, Yuanfang and Kazman, Rick and Mo, Ran and Feng, Qiong},
+  booktitle={2016 IEEE/ACM 38th International Conference on Software Engineering (ICSE)},
+  pages={488--498},
+  year={2016},
+  organization={IEEE}
+}
+
+@book{wohlin2012experimentation,
+  title={Experimentation in software engineering},
+  author={Wohlin, Claes and Runeson, Per and Host, Martin and Ohlsson, Magnus C and Regnell, Bjorn and Wesslen, Anders},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
