Updating scripts and bib with sps from sms

--- a/python/analysis/extraction.ipynb
+++ b/python/analysis/extraction.ipynb
@@ -94,7 +94,7 @@
     "        print('{}, {}, {}, {}, {}, {}'.format(i, key, year, list_authors, title, abstract))\n",
     "        print('---')\n",
     "        i += 1\n",
-    "    print(\"Sucesso! Leitura de {} entradas no arquivo {}\".format(i, '../../bib/bibliography.bib'))\n",
+    "    print(\"Sucesso! Leitura de {} entradas no arquivo {}\".format(i-1, '../../bib/bibliography.bib'))\n",
     "except Exception as e:\n",
     "    print(\"Erro \" + str(e)+ \" na leitura do arquivo \" + '../../bib/bibliography.bib')"
    ]
