--- a/python/analysis/testes.ipynb
+++ b/python/analysis/testes.ipynb
@@ -16,6 +16,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/Technical-Debt-Large-Scale/qualification.git"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
