Updated teste notebook to aid google colabs.

--- a/python/analysis/testes.ipynb
+++ b/python/analysis/testes.ipynb
@@ -34,7 +34,16 @@
     "\n",
     "pd.set_option('display.max_colwidth', 500)\n",
     "\n",
-    "file_xls_to_scan = '../../xls/mergepatdsp.xls'\n"
+    "file_xls_to_scan = 'qualification/xls/mergepatdsp.xls'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade xlrd"
    ]
   },
   {
@@ -148,15 +157,6 @@
    "outputs": [],
    "source": [
     "df_papers_by_year[['year', 'title', 'abstract', 'link']].query(\"year==2021\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_papers_by_year.to_csv(\"my_bib_td_atd.csv\", encoding=\"utf-8\")\n"
    ]
   }
  ],
