Added abstract analysis.

--- a/python/analysis/extractionatd.ipynb
+++ b/python/analysis/extractionatd.ipynb
@@ -92,6 +92,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analise via NLTK"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -100,6 +107,8 @@
     "# Remove os abstracts vazios\n",
     "df_data = df_data[['key', 'year', 'list_authors', 'title', 'abstract']]\n",
     "df_data = df_data.dropna()\n",
+    "\n",
+    "df_all_papers = df_data.copy()\n",
     "df_data.head(3)"
    ]
   },
@@ -175,6 +184,7 @@
    "source": [
     "# Guarda em uma lista todas as frases que contem Architectural Technical Debt\n",
     "list_atd = []\n",
+    "list_atd_aux = []\n",
     "for abstract in list_abstract:\n",
     "  list_temp = tokenizer.tokenize(abstract)\n",
     "  for item in list_temp:\n",
@@ -182,6 +192,22 @@
     "    atd_lower = 'Architectural Technical Debt'.lower()\n",
     "    if atd_lower in item_to_lower:\n",
     "      list_atd.append(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faz o merge de todos as sentencas que contem ATD\n",
+    "all_atd_abstract_in_one = ' '.join(list_atd)\n",
+    "\n",
+    "# Tokenization\n",
+    "tokens_atd_abstract = nltk.word_tokenize(all_atd_abstract_in_one)\n",
+    "\n",
+    "# Lista de todos os tokens de todos os atd abstracts em minusculo\n",
+    "list_of_tokens_atd_abstract = [item.lower() for item in tokens_atd_abstract]"
    ]
   },
   {
@@ -225,13 +251,6 @@
     "# Mostra as palavras que mais se repetem\n",
     "sorted(dict_counts_atd_words.items(), key=lambda x: x[1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -282,12 +301,6 @@
     "\n",
     "filtered_sentence = [w for w in word_tokens if not w.lower() in stop_words]\n",
     " \n",
-    "#filtered_sentence = []\n",
-    " \n",
-    "#for w in word_tokens:\n",
-    "#    if w not in stop_words:\n",
-    "#        filtered_sentence.append(w)\n",
-    " \n",
     "print(word_tokens)\n",
     "print(filtered_sentence)"
    ]
@@ -320,13 +333,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,8 +340,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "!git clone https://github.com/amueller/word_cloud.git"
    ]
@@ -377,7 +385,7 @@
     "    wordcloud.to_file(fileName)\n",
     "    print(f'Arquivo {fileName} gerado com sucesso!')\n",
     "  except Exception as ex:\n",
-    "    print(f'Erro ao gerar o arquivo {name}')\n",
+    "    print(f'Erro ao gerar o arquivo {name}: {str(ex)}')\n",
     "\n",
     "# Generate a Word of Cloud about text\n",
     "def generateWordCloud2(name, my_text, my_path='qualification/wordcloud'):\n",
@@ -389,7 +397,7 @@
     "    wordcloud.to_file(fileName)\n",
     "    print(f'Arquivo {fileName} gerado com sucesso!')\n",
     "  except Exception as ex:\n",
-    "    print(f'Erro ao gerar o arquivo {name}')\n",
+    "    print(f'Erro ao gerar o arquivo {name}: {str(ex)}')\n",
     "\n",
     "# Generate a Word of Cloud about text\n",
     "def generateWordCloud3(name, my_text, my_path='qualification/wordcloud'):\n",
@@ -401,7 +409,7 @@
     "    wordcloud.to_file(fileName)\n",
     "    print(f'Arquivo {fileName} gerado com sucesso!')\n",
     "  except Exception as ex:\n",
-    "    print(f'Erro ao gerar o arquivo {name}')"
+    "    print(f'Erro ao gerar o arquivo {name}: {str(ex)}')"
    ]
   },
   {
@@ -413,6 +421,128 @@
     "generateWordCloud('word_cloud_atd_no_ponctuation', dict_counts_atd_words_no_ponctuation)\n",
     "generateWordCloud2('word_cloud_atd_all_in_one', all_atd_abstract_in_one)\n",
     "generateWordCloud3('word_cloud_atd_all_in_one2', all_atd_abstract_in_one)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analisa apenas os papers que tenham ATD no Abstract"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df_all_papers.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abstract_with_atd = df_all_papers.abstract.str.contains('Architectural Technical Debt', case=False)\n",
+    "df_atd_papers = df_all_papers[abstract_with_atd]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_atd_papers.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_atd_papers.groupby(['year']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_colwidth', 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_atd_papers[['key', 'year', 'title', 'list_authors']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cria uma lista de elementos contendo a key e as setencas do abstract que contem ATD\n",
+    "list_key_abstract_atd = []\n",
+    "for each in list_atd:\n",
+    "  for index, row in df_atd_papers.iterrows():\n",
+    "    if each in row['abstract']:\n",
+    "      elemento = (row['key'], each)\n",
+    "      list_key_abstract_atd.append(elemento)\n",
+    "    \n",
+    "# Cria um dicionario onde a chave é o author principal e o value é a lista de conceitos de ATD\n",
+    "dict_key_abstract_atd = {}\n",
+    "list_of_key = []\n",
+    "\n",
+    "for each_elemento in list_key_abstract_atd:\n",
+    "  list_of_key.append(each_elemento[0])\n",
+    "set_of_key = set(list_of_key)\n",
+    "list_of_key = list(set_of_key)\n",
+    "\n",
+    "list_sentence_aux = []\n",
+    "for item in list_of_key: \n",
+    "  for each_elemento in list_key_abstract_atd:\n",
+    "    if item==each_elemento[0]:\n",
+    "      list_sentence_aux.append(each_elemento[1])\n",
+    "  dict_key_abstract_atd[item] = list_sentence_aux\n",
+    "  list_sentence_aux = []\n",
+    "\n",
+    "# Cria um dicionario contendo key, authors, year, title e conceito de atd\n",
+    "dict_key_authors_year_title_atd = {}\n",
+    "list_atd_key = []\n",
+    "list_atd_authors = []\n",
+    "list_atd_year = []\n",
+    "list_atd_title = []\n",
+    "list_atd_concept = []\n",
+    "list_atd_link = []\n",
+    "for key, value in dict_key_abstract_atd.items():\n",
+    "  for index, row in df_atd_papers.iterrows():\n",
+    "    if key==row['key']:\n",
+    "      list_atd_key.append(key)\n",
+    "      list_atd_authors.append(row['list_authors'])\n",
+    "      list_atd_year.append(row['year'])\n",
+    "      list_atd_title.append(row['title'])\n",
+    "      list_atd_concept.append(value)\n",
+    "      list_atd_link.append(row['link'])\n",
+    "\n",
+    "dict_key_authors_year_title_atd = {'key':list_atd_key, 'year':list_atd_year, 'title':list_atd_title, 'authors':list_atd_authors, 'atd':list_atd_concept, 'link':list_atd_link}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_key_authors_year_title_atd = pd.DataFrame(dict_key_authors_year_title_atd)\n",
+    "df_key_authors_year_title_atd.sort_values(by='year')[['year', 'title', 'authors', 'atd']]"
    ]
   }
  ],
