Added link in atd table.

--- a/python/analysis/extractionatd.ipynb
+++ b/python/analysis/extractionatd.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "# Remove os abstracts vazios\n",
-    "df_data = df_data[['key', 'year', 'list_authors', 'title', 'abstract']]\n",
+    "df_data = df_data[['key', 'year', 'list_authors', 'title', 'abstract', 'link']]\n",
     "df_data = df_data.dropna()\n",
     "\n",
     "df_all_papers = df_data.copy()\n",
@@ -260,8 +260,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "all_atd_abstract_in_one"
    ]
