Added fuction to create html file.

--- a/python/analysis/extractionatd.ipynb
+++ b/python/analysis/extractionatd.ipynb
@@ -546,6 +546,67 @@
     "df_key_authors_year_title_atd = pd.DataFrame(dict_key_authors_year_title_atd)\n",
     "df_key_authors_year_title_atd.sort_values(by='year')[['year', 'title', 'authors', 'atd']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_html_file(arquivo_html, df_data):\n",
+    "    print('Criando o arquivo {}'.format(arquivo_html))\n",
+    "    try: \n",
+    "        with open(arquivo_html, 'w', encoding='utf-8') as file_html:\n",
+    "            file_html.write('<html>')\n",
+    "            file_html.write('<head>')\n",
+    "            file_html.write('<meta charset=\"utf-8\">')\n",
+    "            file_html.write('<title>Lista de Papers mais importantes sobre ATD</title>')\n",
+    "            file_html.write('</head>')\n",
+    "            file_html.write('<body>')\n",
+    "            for index, row in df_data.iterrows():\n",
+    "                title = '<h2>Título ' + str(index+1) + ': ' + row['title'] + '</h2>'\n",
+    "                file_html.write(title)\n",
+    "                authors = '<h3>Autores: ' + row['authors'] + '</h3>'\n",
+    "                file_html.write(authors)\n",
+    "                year = str(row['year'])\n",
+    "                year = '<h4>Ano: ' + year +  '</h4>'\n",
+    "                file_html.write(year)\n",
+    "                if row['atd'] is not None:\n",
+    "                  abstract = '<p>' + str(row['atd']) + '</p>'\n",
+    "                else:\n",
+    "                    abstract = ''\n",
+    "                file_html.write(abstract)\n",
+    "                file_html.write('<br>')\n",
+    "                if row['link'] is not None:\n",
+    "                  link = '<a href=\"' + str(row['link']) + '\">link</a>'\n",
+    "                else:\n",
+    "                    link = ''\n",
+    "                file_html.write(link)\n",
+    "                file_html.write('<br>')\n",
+    "            file_html.write('</body>')\n",
+    "            file_html.write('</html>')\n",
+    "            print('Arquivo criado com sucesso!')\n",
+    "    except Exception as e: \n",
+    "        print('Erro {} ao criar o arquivo {}'.format(str(e), arquivo_html))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_key_authors_year_title_atd = df_key_authors_year_title_atd.sort_values(by='year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_html_file(arquivo_html='qualification/html/atd_concepts.html', df_data=df_key_authors_year_title_atd)"
+   ]
   }
  ],
  "metadata": {
